gac_sb/objects/AppATcompteEmployeur__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>EtablissementConcerne__c</fullName>
        <label>Etablissement concerné</label>
        <referenceTo>AppATetablissement__c</referenceTo>
        <relationshipLabel>Comptes employeur</relationshipLabel>
        <relationshipName>ComptesEmployeur</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; EtablissementConcerne__r.Mission__c ,  EtablissementConcerne__r.Mission__r.Name,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccmIP1__c</fullName>
        <label>CCM IP1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccmIP2__c</fullName>
        <label>CCM IP2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccmIP3__c</fullName>
        <label>CCM IP3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccmIT1__c</fullName>
        <label>CCM IT1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccmIT2__c</fullName>
        <label>CCM IT2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccmIT3__c</fullName>
        <label>CCM IT3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>formuleCCMIP__c</fullName>
        <formula>&quot;     IP1: &quot; + TEXT(ccmIP1__c) + 
&quot;     IP2: &quot; + TEXT(ccmIP2__c) + 
&quot;     IP3: &quot; + TEXT(ccmIP3__c) + 
&quot;     IP4: &quot; + TEXT(ccmIP4__c)</formula>
        <label>CCMIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formuleCCMIT__c</fullName>
        <formula>&quot;IT1: &quot; + TEXT(ccmIT1__c) + 
&quot;     IT2: &quot; + TEXT(ccmIT2__c) + 
&quot;     IT3: &quot; + TEXT(ccmIT3__c) + 
&quot;     IT4: &quot; + TEXT(ccmIT4__c) + 
&quot;     IT5: &quot; + TEXT(ccmIT5__c) + 
&quot;     IT6: &quot; + TEXT(ccmIT6__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CCMIT</label>
        <type>Text</type>
    </fields>
    <label>Compte employeur</label>
    <nameField>
        <label>Année</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comptes employeur</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AppAT_CE_Annee</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEFT(Name,1)=&apos;2&apos;,
   NOT(REGEX( Name , &apos;[2]{1}[0]{1}[0-9]{2}&apos;)),
   NOT(REGEX( Name , &apos;[1]{1}[9]{1}[0-9]{2}&apos;))
   )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>L&apos;année doit être au format 20XX ou 19XX</errorMessage>
    </validationRules>
</CustomObject>